<resources>

        <string name="app_name">TodoListSample</string>
        <string name="lbl_title">タイトル</string>
        <string name="lbl_content">内容 :</string>
        <string name="btn_input_register">登録</string>
        <string name="btn_input_to_list">一覧画面へ</string>
        <string name="hint_title">タイトルを入力してください</string>
        <string name="hint_content">内容を入力してください</string>
        <string name="lbl_empty">表示するTODOはありません</string>
        <string name="btn_update">更新</string>
        <string name="btn_delete">削除</string>
        <string name="lbl_delete_success">削除に成功しました</string>
        <string name="lbl_delete_failed">削除に失敗しました</string>
        <string name="lbl_update_failed">更新に成功しました</string>


</resources>